--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"drizzle-orm": "^0.38.4",
-		"postgres": "^3.4.5"
+		"postgres": "^3.4.5",
+		"svelte-input-components": "^1.0.0"
 	}
 }
