--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.10",
+		"prisma": "^6.3.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.17",
@@ -47,6 +48,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@prisma/client": "^6.3.1",
 		"drizzle-orm": "^0.38.4",
 		"postgres": "^3.4.5",
 		"svelte-input-components": "^1.0.0"
